# code-inspector

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: google_test.cmake
include/code_inspector/: bb_info.h  func_info.h  inspection.h  io.h  llvm_utils.h  pretty_printer.h  types.h
src/: CMakeLists.txt  inspection.cpp  main.cpp
src/container/: bb_info.cpp  func_info.cpp
src/utils/: io.cpp  llvm_utils.cpp  pretty_printer.cpp
tests/: CMakeLists.txt  main.cpp  test_bb_info.cpp  test_func_info.cpp  test_io.cpp  test_llvm_utils.cpp
